scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,16 @@ body {
   @apply antialiased text-gray-900 dark:text-darkprimary-100 tracking-tight bg-white dark:bg-darkprimary-900 overflow-hidden;
 }
 
+.noScrollbar::-webkit-scrollbar-track {
+  @apply hidden;
+}
+.noScrollbar::-webkit-scrollbar {
+  @apply hidden;
+}
+.noScrollbar::-webkit-scrollbar-thumb {
+  @apply hidden;
+}
+
 .box {
   @apply bg-gray-200 dark:bg-darkprimary-800 border-2 h-16 my-1 mx-2 sm:mx-10 rounded-2xl border-gray-500 px-4 text-xl font-medium transition duration-300 ease-in-out hover:border-opacity-50 hover:shadow-lg;
 }
